--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ MENU
     <a href="https://heyanonakakobo.github.io/Top/"><li>Top</li></a>
 
 
-    <img src="./photo/47.jpg" alt="" width="300" height="200">
+    <img src="./47.jpg" alt="" width="300" height="200">
 <a href="https://www.mercari.com/jp/mypage/items/m82566352647/"><li>キハ47屋根上ダクト(九州タイプ)</li></a>
 
 
