--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="./yaneDC.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>部屋の中こうぼう</title>
+  <title>部屋の中こうぼう屋根類</title>
 </head>
 <body>
 
