--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <link rel="stylesheet" href="./yaneDC.css">
+  <link rel="stylesheet" href="./床下機器-気動車.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>部屋の中こうぼう屋根類</title>
+  <title>部屋の中こうぼう</title>
 </head>
 <body>
 
@@ -30,25 +30,19 @@ MENU
   <summary>製品情報</summary>
   <details>
 　<summary>床下類</summary>
-  <a href="https://heyanonakakobo.github.io/EC-yukashita/">電車</a><br> 
+  　電車<br> 
 <a href="https://heyanonakakobo.github.io/DC-yukashita/">気動車</a>
     </details>
   <details>
   　<summary>屋根類</summary>
     <p>気動車</p>
   </details>
-    <details>
-    　<summary>その他</summary>
-      その他製品<br>
-    </details>
 </details>
 
 <li>製品化発表</li>
-    
-    <li><a href="https://heyanonakakobo.github.io/BVE-TrainSim/">BVE-TrainSim</a></li>
 
 <div class="globalNav"><a href="https://ameblo.jp/kamome885-ameba"><li>ブログ</li></a></div>
-<a href="https://heyanonakakobo.github.io/otoiawase/"><li>お問い合わせ</li></a>
+<li>お問い合わせ</li>
 </div>
 
 
@@ -60,36 +54,31 @@ MENU
 
 <!--製品入力欄-->
 
- <h2>～床下類～</h2>
-  <div class="sinseihin">
 
-
-    <a href="https://heyanonakakobo.github.io/Top/"><li>Top</li></a>
-
-
-    <img src="./47.jpg" alt="" width="300" height="200">
-<a href="https://www.mercari.com/jp/mypage/items/m82566352647/"><li>キハ47屋根上ダクト(九州タイプ)</li></a>
+ <div class="box3">
+  <h2>～新製品～</h2>
+   <div class="sinseihin">
 
 
 
 
+
+
+      <a href="https://heyanonakakobo.github.io/Top/"><li>Top</li></a>
+
+
+<img src="./photo/185.jpg" alt="200" width="300" height="200" > 
+<a href="https://www.mercari.com/jp/items/m47202806868/"><li>キハ185車端部機器</li></a>
+<img src="./photo/200.jpg" alt="200" width="300" height="200" > 
+
+<a href="https://www.mercari.com/jp/mypage/items/m31488372175/"><li>キハ200車端部機器</li></a>
+</div>
 
 <br>
 <br>
 <br>
 <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
 
 
 
