--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
   <link rel="stylesheet" href="./yaneDCcss">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>部屋の中こうぼう</title>
+ <title>部屋の中こうぼう</title>
+  
 </head>
 <body>
-
+部屋の中こうぼう
 <div class="heddar">
 <div class="box1">
 <br>
-<center><img src="./header.png" alt="heyanonakakobo" width="700" height="200"></div></div></center>
+<center><img src="./header.png" alt="部屋の中こうぼう" width="700" height="200"></div></div></center>
 
-
+<div class="ue">
+  &nbsp;&nbsp; 部屋の中こうぼう(工房)公式ホームページです。
+</div>
 
 <br>
 <div class="box2">
 
   <div class="menu">
 
- 
-MENU
+ <p>部屋の中こうぼう</p>
+<p> MENU</p>
    <br>
    <div class="globalNav"><a href="https://heyanonakakobo.github.io/Top/"><li>TOP</li></a></div>
 <li>概要</li>
@@ -30,24 +33,28 @@ MENU
   <summary>製品情報</summary>
   <details>
 　<summary>床下類</summary>
-  　電車<br> 
-<a href="https://heyanonakakobo.github.io/DC-yukashita/">気動車</a>
+  　<a href="https://heyanonakakobo.github.io/EC-yukashita/">電車</a><br> 
+  　 <a href="https://heyanonakakobo.github.io/DC-yukashita/">気動車</a>
     </details>
   <details>
   　<summary>屋根類</summary>
-    <p>気動車</p>
+    <a href="https://heyanonakakobo.github.io/yaneDC/">気動車</a>
   </details>
+    <details>
+    　<summary>その他</summary>
+      その他製品<br>
+    </details>
 </details>
 
 <li>製品化発表</li>
+    <li><a href="https://heyanonakakobo.github.io/BVE-TrainSim/">BVE-TrainSim</a></li>
 
 <div class="globalNav"><a href="https://ameblo.jp/kamome885-ameba"><li>ブログ</li></a></div>
-<li>お問い合わせ</li>
+<a href="https://heyanonakakobo.github.io/otoiawase/"><li>お問い合わせ</li></a>
 </div>
 
 
 </div>
-
 
 
 
