--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
  <div class="box3">
-  <h2>～新製品～</h2>
+  <h2>～販売中～</h2>
    <div class="sinseihin">
 
 
@@ -74,11 +74,9 @@
       <a href="https://heyanonakakobo.github.io/Top/"><li>Top</li></a>
 
 
-<img src="./photo/185.jpg" alt="200" width="300" height="200" > 
-<a href="https://www.mercari.com/jp/items/m47202806868/"><li>キハ185車端部機器</li></a>
-<img src="./photo/200.jpg" alt="200" width="300" height="200" > 
+<img src="./47.jpg" alt="200" width="300" height="200" > 
+<a href="https://www.mercari.com/jp/mypage/items/m82566352647/"><li>キハ47屋根上ダクト</li></a>
 
-<a href="https://www.mercari.com/jp/mypage/items/m31488372175/"><li>キハ200車端部機器</li></a>
 </div>
 
 <br>
