--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </details>
 </details>
 
-<li>製品化発表</li>
+<a href="https://heyanonakakobo.github.io/Seihinka/"><li>製品化発表</li></a>
     <li><a href="https://heyanonakakobo.github.io/BVE-TrainSim/">BVE-TrainSim</a></li>
 
 <div class="globalNav"><a href="https://ameblo.jp/kamome885-ameba"><li>ブログ</li></a></div>
