--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <a href="https://heyanonakakobo.github.io/Seihinka/"><li>製品化発表</li></a>
     <li><a href="https://heyanonakakobo.github.io/BVE-TrainSim/">BVE-TrainSim</a></li>
-
+<div class="globalNav"><a href="https://heyanonakakobo.github.io/Event/"><li>イベント情報</li></a></div>
 <div class="globalNav"><a href="https://ameblo.jp/kamome885-ameba"><li>ブログ</li></a></div>
 <a href="https://heyanonakakobo.github.io/otoiawase/"><li>お問い合わせ</li></a>
 </div>
