--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       その他製品<br>
     </details>
 </details>
-
+<a href="https://heyanonakakobo.github.io/sticker/"><li>ステッカー類</li></a>
 <a href="https://heyanonakakobo.github.io/Seihinka/"><li>製品化発表</li></a>
     <li><a href="https://heyanonakakobo.github.io/BVE-TrainSim/">BVE-TrainSim</a></li>
 <div class="globalNav"><a href="https://heyanonakakobo.github.io/Event/"><li>イベント情報</li></a></div>
