--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
   　<summary>屋根類</summary>
     <a href="https://heyanonakakobo.github.io/yaneDC/">気動車</a>
   </details>
+  <a href="https://heyanonakakobo.github.io/sticker/">ステッカー類</a>
     <details>
     　<summary>その他</summary>
       その他製品<br>
     </details>
 </details>
-<a href="https://heyanonakakobo.github.io/sticker/"><li>ステッカー類</li></a>
+
 <a href="https://heyanonakakobo.github.io/Seihinka/"><li>製品化発表</li></a>
     <li><a href="https://heyanonakakobo.github.io/BVE-TrainSim/">BVE-TrainSim</a></li>
 <div class="globalNav"><a href="https://heyanonakakobo.github.io/Event/"><li>イベント情報</li></a></div>
