--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
   </details>
   <a href="https://heyanonakakobo.github.io/sticker/">ステッカー類</a>
     <details>
-    　<a href="https://heyanonakakobo.github.io/Other/">その他の製品</a>
+    　   　<summary>その他</summary>
+        <a href="https://heyanonakakobo.github.io/Other/">その他の製品</a>
       その他製品<br>
     </details>
 </details>
